ファイルをアップデートしました。

--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,7 @@
     <!-- aaa -->
     <div id="bottombar">
         <img id="button" src="images/omikuji-btn-hajimeru.png" onclick="omikuji()">
+        <!-- コメントです。 -->
     </div>
 </body>
 </html>
