index.htmlをアップデートしました。
！に変更。

--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
     <!-- aaa -->
     <div id="bottombar">
         <img id="button" src="images/omikuji-btn-hajimeru.png" onclick="omikuji()">
-        <!-- コメントです。。 -->
+        <!-- コメントです！ -->
     </div>
 </body>
 </html>
